make mobile overflow-x fix compatible with scrollTo()

--- a/mystyle.css
+++ b/mystyle.css
@@ -12,8 +12,12 @@ body, html {
     width: 100%;
     padding: 0 0 0 0;
     margin: 0 0 0 0;
-    overflow-x: hidden;
+    overflow-x: clip;
 }
+/* 
+body {
+    overflow-x: hidden;
+} */
 
 #wrapper {
     width:100%;
